Replaced String.isBlank() for Java compatibility
Replaced String.isBlank() for Java compatibility